modified homepage message

--- a/docker/htmlFile/dockerfiles/index.html
+++ b/docker/htmlFile/dockerfiles/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello, Kishalay here!</h1>
-    <p>This is a my page. Happy to see you</p>
+    <p>This is my page. Happy to see you</p>
 </body>
 </html>
