--- a/docker/htmlFile/dockerfiles/index.html
+++ b/docker/htmlFile/dockerfiles/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kishalycloudpage</title>
+    <style>
+        body{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            height: 100vh;
+        }
+        h1{
+            font-size: 60px;
+            font-weight: 700;
+            margin: 0px;
+        }
+        p{
+            font-size: 20px;
+            font-weight: 500;
+            margin-top: 10px;
+        }
+        img{
+            margin-bottom: 10px;
+        }
+        .profile{
+            width: 300px;
+            height: 300px;
+        }
+        .linkedin{
+            width: 300px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
+    <img class="profile" src="_DSC2186.png">
     <h1>Hello, Kishalay here!</h1>
     <p>This is my page. Happy to see you</p>
+    <a href="https://www.linkedin.com/in/connect-with-kishalay/"><img class="linkedin" src="/Users/kishalay/Downloads/LinkedIn-Logo.wine.png"></a>
 </body>
 </html>
