--- a/docker/htmlFile/dockerfiles/index.html
+++ b/docker/htmlFile/dockerfiles/index.html
@@ -37,9 +37,9 @@
     </style>
 </head>
 <body>
-    <img class="profile" src="_DSC2186.png">
+    <img class="profile" src="images/_DSC21863.webp">
     <h1>Hello, Kishalay here!</h1>
     <p>This is my page. Happy to see you</p>
-    <a href="https://www.linkedin.com/in/connect-with-kishalay/"><img class="linkedin" src="/Users/kishalay/Downloads/LinkedIn-Logo.wine.png"></a>
+    <a href="https://www.linkedin.com/in/connect-with-kishalay/"><img class="linkedin" src="images/LinkedIn-Logo.wine.png"></a>
 </body>
 </html>
